docs: update multiple item insert
