# src/routes/order.routes.js
@@ -33,7 +33,7 @@ router.post('/order', VerifyToken, (req, res, next) => {
 });
 
 /***************************************************************************************************
- * Adds a new item to an order ..was post -> /add/:id
+ * Adds a new item to an order
  * @see https://app.swaggerhub.com/apis/CloudyPadmal/Sysco-POS/1.0.1#/order/order_add_item
  **************************************************************************************************/
 router.put('/item/:id', VerifyToken, (req, res, next) => {
@@ -57,11 +57,11 @@ router.put('/item/:id', VerifyToken, (req, res, next) => {
         });
 });
 
-/**
+/***************************************************************************************************
  * Adds a set of items to an order
  * @see 
- */
-router.put('/add/:id', VerifyToken, (req, res, next) => {
+ **************************************************************************************************/
+router.put('/items/:id', VerifyToken, (req, res, next) => {
     // Need to add every item requested to add to this order
     if (req.body.items === undefined || Object.keys(req.body.items).length === 0) {
         return res.status(400).json({ 'status': 'No items to add to this order' });
